--- a/Proyecto 3/src/proyecto/pkg3/FXMLDocument.fxml
+++ b/Proyecto 3/src/proyecto/pkg3/FXMLDocument.fxml
@@ -2,13 +2,23 @@
 
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="598.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="proyecto.pkg3.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="470.0" prefWidth="598.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto.pkg3.FXMLDocumentController">
    <children>
-      <TabPane layoutY="-2.0" prefHeight="71.0" prefWidth="598.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutY="-2.0" prefHeight="470.0" prefWidth="598.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Tour" />
+          <Tab text="Tour">
+               <content>
+                  <TableView fx:id="nhsdsad" prefHeight="200.0" prefWidth="200.0">
+                    <columns>
+                      <TableColumn onSort="#handleButtonAction" prefWidth="221.0" text="Nombre" />
+                      <TableColumn prefWidth="128.0" text="C2" />
+                    </columns>
+                  </TableView>
+               </content></Tab>
           <Tab text="Clientes" />
             <Tab text="Reservas" />
             <Tab text="Reportes" />
